--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,26 +17,15 @@ jobs:
         java: [8, 11, 17, 21]
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-java@v4
         with:
           distribution: "temurin"
           cache: "sbt"
           java-version: ${{ matrix.java }}
-      - name: Main project tests
-        run: sbt test
 
-  benchmarks-test:
-    runs-on: ubuntu-latest
-    name: Benchmark tests
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
-        with:
-          distribution: "temurin"
-          cache: "sbt"
-          java-version: 17
-      - name: Run sample benchmarks
-        run: sbt 'bench/Jmh/run -i 1 -f1 -t1 -foe true'
+      - name: Main project tests
+        run: sbt test 
 
   docker_test:
     runs-on: ${{ matrix.os }}
@@ -94,8 +83,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: yarn global add @bazel/bazelisk
-      - run: sbt cli/pack
-      - run: echo "$PWD/scip-java/target/pack/bin" >> $GITHUB_PATH
+      - run: sbt build
+      - run: echo "$PWD/out/bin" >> $GITHUB_PATH
       - name: Auto-index scip-java codebase
         run: |
           scip-java index --build-tool=bazel --bazel-scip-java-binary=$(which scip-java)
@@ -116,4 +105,48 @@ jobs:
           distribution: "temurin"
           java-version: 17
           cache: "sbt"
+
       - run: sbt checkAll
+
+      - name: Run sample benchmarks
+        run: sbt 'bench/Jmh/run -i 1 -f1 -t1 -foe true'
+
+
+  maven:
+    runs-on: ubuntu-latest
+    name: Maven tests
+    strategy:
+      fail-fast: false
+      matrix:
+        java: [8, 11, 17, 21]
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-java@v4
+        with:
+          distribution: "temurin"
+          cache: "sbt"
+          java-version: ${{ matrix.java }}
+
+
+      - run: |
+          sbt build publishM2 publishLocal dumpScipJavaVersion
+          echo "SCIP_JAVA_VERSION=$(cat VERSION)" >> $GITHUB_ENV
+          echo "SCIP_JAVA_CLI=$PWD/out/bin/scip-java" >> $GITHUB_ENV
+
+      - run: |
+          mvn clean verify -DskipTests -Dscip-java.version=$SCIP_JAVA_VERSION sourcegraph:sourcegraphDependencies
+        working-directory: examples/maven-example
+
+      - run: $SCIP_JAVA_CLI index-semanticdb target/semanticdb-targetroot
+        working-directory: examples/maven-example
+
+      - run: |
+          set -e
+          grep org.hamcrest target/semanticdb-targetroot/*dependencies.txt
+          grep $PWD/src/main/java target/semanticdb-targetroot/*dependencies.txt
+        working-directory: examples/maven-example
+
+      - run: du -h index.scip
+        working-directory: examples/maven-example
+
