--- a/.github/workflows/sourcegraph.yml
+++ b/.github/workflows/sourcegraph.yml
@@ -21,6 +21,8 @@ jobs:
           java-version: 8
           cache: "sbt"
 
+      - uses: sbt/setup-sbt@v1
+
       - name: Publish CLI locally
         run: sbt publishLocal dumpScipJavaVersion
 
