--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -16,6 +16,7 @@ jobs:
           distribution: 'temurin'
           java-version: 8
           cache: 'sbt'
+      - uses: sbt/setup-sbt@v1
       - uses: docker/setup-buildx-action@v1
       - name: Login to DockerHub
         uses: docker/login-action@v1
