--- a/.github/workflows/release-maven.yml
+++ b/.github/workflows/release-maven.yml
@@ -15,6 +15,7 @@ jobs:
           distribution: 'temurin'
           java-version: 8
           cache: 'sbt'
+      - uses: sbt/setup-sbt@v1
       - name: Publish ${{ github.ref }}
         run: sbt ci-release
         env:
