--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,6 +88,15 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: yarn global add @bazel/bazelisk
+
+      - uses: actions/setup-java@v3
+        with:
+          distribution: "temurin"
+          cache: "sbt"
+          java-version: 17
+
+      - uses: sbt/setup-sbt@v1
+
       - run: sbt build
       - run: echo "$PWD/out/bin" >> $GITHUB_PATH
       - name: Auto-index scip-java codebase
@@ -105,6 +114,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
       - uses: actions/setup-java@v3
         with:
           distribution: "temurin"
