--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,8 @@ jobs:
           cache: "sbt"
           java-version: ${{ matrix.java }}
 
+      - uses: sbt/setup-sbt@v1
+
       - name: Main project tests
         run: sbt test 
 
@@ -42,6 +44,8 @@ jobs:
           distribution: "temurin"
           cache: "sbt"
           java-version: 17
+
+      - uses: sbt/setup-sbt@v1
 
       - name: Build Dockerised CLI
         run: sbt cli/docker
@@ -84,6 +88,15 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: yarn global add @bazel/bazelisk
+
+      - uses: actions/setup-java@v3
+        with:
+          distribution: "temurin"
+          cache: "sbt"
+          java-version: 17
+
+      - uses: sbt/setup-sbt@v1
+
       - run: sbt build
       - run: echo "$PWD/out/bin" >> $GITHUB_PATH
       - name: Auto-index scip-java codebase
@@ -101,11 +114,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
       - uses: actions/setup-java@v3
         with:
           distribution: "temurin"
           java-version: 11
           cache: "sbt"
+
+      - uses: sbt/setup-sbt@v1
 
       - run: sbt --client checkAll
 
@@ -129,6 +145,7 @@ jobs:
           cache: "sbt"
           java-version: ${{ matrix.java }}
 
+      - uses: sbt/setup-sbt@v1
 
       - run: |
           sbt build publishM2 publishLocal dumpScipJavaVersion
