Handle empty source jars

--- a/examples/bazel-example/src/main/java/srcjar_example/BUILD
+++ b/examples/bazel-example/src/main/java/srcjar_example/BUILD
@@ -4,11 +4,18 @@ genrule(
     cmd = "echo 'package com.testing; public class Bar {};' > Bar.java && jar cf $(@) Bar.java",
 )
 
+genrule(
+    name = "empty-srcjar",
+    outs = ["empty.srcjar"],
+    cmd = "touch test.txt && zip $(@) test.txt && zip -d $(@) test.txt",
+)
+
 java_library(
     name = "testing",
     srcs = [
         "Foo.java",
         ":generated-srcjar",
+        ":empty-srcjar"
     ],
 )
 
@@ -19,4 +26,3 @@ java_library(
         ":generated-srcjar",
     ],
 )
-
