--- a/.github/workflows/community-build.yml
+++ b/.github/workflows/community-build.yml
@@ -13,12 +13,13 @@ on:
         type: string
 
 jobs:
-  build:
+  build_from_source:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
       - uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
@@ -40,4 +41,33 @@ jobs:
           if-no-files-found: error
 
 
+  community_build:
+    runs-on: ubuntu-latest
+    needs: [build_from_source]
+    strategy:
+      fail-fast: true
+      matrix:
+        include:
+          - repo: spring-projects/spring-data-relational
+            jdk: 11
+            cache: maven
+    steps:
+      - name: Download binaries
+        uses: actions/download-artifact@v4
+        id: scip-java-binary
+        with:
+          path: binaries
+
+      - name: List downloaded binaries
+        run: ls -R binaries
+
+      - uses: actions/checkout@v3
+        with:
+          repository: ${{ matrix.repo }}
+
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: ${{ matrix.jdk }}
+          cache: ${{ matrix.cache }}
 
