--- a/.github/workflows/community-build.yml
+++ b/.github/workflows/community-build.yml
@@ -51,6 +51,14 @@ jobs:
           - repo: spring-projects/spring-data-relational
             jdk: 17
             cache: maven
+
+          - repo: spring-projects/spring-framework
+            jdk: 17
+            cache: maven
+
+          - repo: spring-projects/spring-boot
+            jdk: 17
+            cache: maven
     steps:
       - name: Download binaries
         uses: actions/download-artifact@v4
