Don't create a subpath for extracted_srcjar
This avoids an issue where we declare output to be a prefix of the rule

--- a/examples/bazel-example/src/main/java/srcjar_example/BUILD
+++ b/examples/bazel-example/src/main/java/srcjar_example/BUILD
@@ -26,3 +26,12 @@ java_library(
         ":generated-srcjar",
     ],
 )
+
+java_test(
+    name = "testing_test",
+    srcs = [
+        "Foo.java",
+        ":generated-srcjar",
+    ],
+    test_class = "Foo",
+)
